# SAPTester

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  run_dev.sh  run_prod.sh
.github/workflows/: ci.yaml  fly.yaml  pages.yaml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fly.toml  run_dev.sh
backend/src/: args.rs  main.rs  routes.rs
backend/src/api/: db.rs
backend/src/battle/: mod.rs  response.rs  team.rs
backend/src/db/: response.rs
backend/tests/: test_teams.json
docs/: frontend-6b2b04906046e622.js  frontend-6b2b04906046e622_bg.wasm  frontend-e793a290a1f8d472.js  frontend-e793a290a1f8d472_bg.wasm  frontend-e797590ec501427.js  frontend-e797590ec501427_bg.wasm  index.html
docs/assets/dioxus/: frontend.js  frontend_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
frontend/: Cargo.toml  Dioxus.toml  Trunk.toml  index.html  run_dev.sh
frontend/data/: README.md  foods.json  pets.json
frontend/src/: main.rs
frontend/src/components/: about.rs  footer.rs  home.rs  mod.rs  nav.rs  routes.rs  tabs.rs
frontend/src/components/battle/: fight.rs  item_selection.rs  mod.rs  selected_pet.rs  state.rs  team.rs  ui.rs  utils.rs
frontend/src/records/: effect.rs  food.rs  mod.rs  pet.rs  query.rs  record.rs  team.rs
frontend/src/utils/: extract_urls.rs  get_records.rs  mod.rs
src/: app.rs  main.rs
src/components/: battle.rs  footer.rs  mod.rs  nav.rs  routes.rs
src/components/battle/: fight.rs  item_selection.rs  mod.rs  selected_pet.rs  team.rs  ui.rs  utils.rs
src/utils/: extract_urls.rs
