[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.16", features = ["headers"] }
clap = { version = "4.2.7", features = ["derive"] }
http = "0.2.9"
hyper = "0.14.26"
indexmap = "1.9.3"
itertools = "0.10.5"
log = "0.4.17"
regex = "1.8.1"
saptest = "0.4.10"
serde = "1.0.160"
serde_json = "1.0.96"
simple-logging = "2.0.2"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }
