[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "1.9.3"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.96"
regex = "1.8.1"
itertools = "0.10.5"
reqwest = { version = "0.11.17", features = ["json"] }
once_cell = "1.17.1"
dioxus = "0.3.2"
dioxus-web = "0.3.1"
dioxus-router = "0.3.0"
serde = "1.0.162"
log = "0.4.17"
